# second-brain

./: .gitignore  .mcp.json.example  README.md  design.md  pyproject.toml  rag_config.example.toml
.github/: copilot-instructions.md
Personal/Blog/: 2026-02-22-building-semantic-search-engine-codex-cli.md  2026-02-22-claude-code-obsidian-vault-mcp.md
agents/codex/vault-mcp/: .mcp.json.example  README.md  pyproject.toml
agents/codex/vault-mcp/src/vault_mcp/: config.py  ingest.py  metadata.py  server.py  topic_tree.py
agents/codex/vault-mcp/tests/: test_chunker.py  test_ingest_incremental.py  test_metadata.py
docs/plans/: 2026-02-22-obsidian-vault-mcp-semantic-search.md
obsidian_rag/: __init__.py  chunker.py  cli.py  config.py  embedder.py  indexer.py  keyword_store.py  mcp_server.py  models.py  parser.py  retrieval.py  scanner.py  service.py  sync_state.py  vector_store.py  watcher.py
src/vault_mcp/: chunker.py  config.py  index_store.py
tests/: test_chunker.py  test_config_cli.py  test_indexer.py  test_keyword_store.py  test_metadata.py  test_parser.py  test_retrieval.py  test_search_tool.py  test_sync_state.py  test_vector_store.py
