[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-rag-mcp"
version = "0.1.0"
description = "Local-first Obsidian RAG with hybrid retrieval and MCP interface"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "requests>=2.32",
  "qdrant-client>=1.13",
  "watchfiles>=1.0",
  "mcp>=1.13.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.scripts]
obsidian-rag = "obsidian_rag.cli:main"
obsidian-rag-mcp = "obsidian_rag.mcp_server:run"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["obsidian_rag*"]
