[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "vault-mcp"
version = "0.1.0"
description = "Obsidian semantic search MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "chromadb>=1.0.0",
  "mcp>=1.0.0",
  "ollama>=0.5.0",
  "python-frontmatter>=1.1.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
